-
Bug
-
Resolution: Fixed
-
Critical
-
Lustre 2.15.0
-
3
-
9223372036854775807
Due to patch https://review.whamcloud.com/44108 "LU-14797 sec: add projid to nodemap", an upgrade from a previous Lustre version that does not have this patch might lead to a broken nodemap behavior.
This patch changes the internal representation of the map mode. Before this patch, an internal value of 0 for map mode means "map both uid and gid". And this is the default value. But with this patch, the value 0 does not mean anything anymore: "map both uid and gid" has been changed to value 3 internally.